--- a/Engine Project/Engine Project.vcxproj.filters
+++ b/Engine Project/Engine Project.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Auxillary\Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Window_BB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Auxillary\ConsoleManip.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Auxillary\Log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Window_BB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
